--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lucide-react": "^0.471.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-google-places-autocomplete": "^4.1.0",
     "react-router": "^7.1.1",
     "react-router-dom": "^7.1.1",
     "tailwind-merge": "^2.6.0",
